# omniQTL

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
src/omniQTL/: caQTL.py  cli.py  coloc.py  eQTL.py  genotyping.py  pQTL.py  qc.py  qtl.py  summary.py  utils.py  vis.py
src/omniQTL/config/: config_template.yaml
src/omniQTL/scripts/: coloc_SuSiE.R  qtltools_runFDR_cis_padj.R
