[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniQTL"
version = "0.0.1"
description = "to be updated"
readme = "README.md"
requires-python = ">=3.12"

authors = [
  {name = "Hanice Sun", email = "hanicesun@gmail.com"}
]

[project.urls]
"Homepage" = "https://github.com/HaniceSun/omniQTL"

[project.scripts]
omniQTL = "omniQTL.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
omniQTL = ["data/*.txt*", "config/*.yaml"]